Fixed layout issue in IE 11

--- a/wcfsetup/install/files/style/layout/content.scss
+++ b/wcfsetup/install/files/style/layout/content.scss
@@ -83,7 +83,7 @@
 		}
 		
 		.contentHeaderTitle {
-			flex: 1 1 auto;
+			flex: 1 1 0%;
 		}
 		
 		.contentHeaderNavigation {
